--- a/Introduction/451-a.html
+++ b/Introduction/451-a.html
@@ -24,7 +24,7 @@
     </div>
     <div id="links" class="container" style="text-align: center">
         <a href="http://ceclnx01.cec.miamioh.edu/~reynolt4/cse451-reynolt4-web/Introduction/451-b.html">451-b on ceclnx01</a><br>
-        <a href="http://reynolt4.aws.csi.miamioh.edu/Introduction/451-b.html">451-b on openstack</a>
+        <a href="http://reynolt4.aws.csi.miamioh.edu/cse451-reynolt4-web/Introduction/451-b.html">451-b on openstack</a>
     </div>
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
