correct openstack url

--- a/html2/page3.html
+++ b/html2/page3.html
@@ -64,7 +64,7 @@
         <p style="margin-top: 10px; margin-bottom: 5px; color: whitesmoke; text-align: center">TaJah Reynolds CSE451 Web Services</p>
         <ul> 
             <li style="display: inline"><a href="http://ceclnx01.cec.miamioh.edu/~reynolt4/cse451-reynolt4-web/html2/index.html" style="color: whitesmoke">ceclnx01</a></li>
-            <li style="display: inline"><a href="http://reynolt4.aws.csi.miamioh.edu/html2/index.html" style="color: whitesmoke">openstack</a></li>
+            <li style="display: inline"><a href="http://reynolt4.aws.csi.miamioh.edu/cse451-reynolt4-web/html2/index.html" style="color: whitesmoke">openstack</a></li>
             <li style="display: inline"><a href="index.html" style="color: whitesmoke">index.html</a></li>
         </ul>
     </footer>
