--- a/html2/page2.html
+++ b/html2/page2.html
@@ -7,7 +7,7 @@
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     </head>
     
-    <header style="height: 75px; width: 100%; background-color: cornflowerblue">
+    <header style="height: 75px; width: 100%; background-color: cornflowerblue; border-bottom: solid;">
         <h1 style="padding-left: 1%">TaJah Reynolds CSE451 HTML Assignment</h1>
     </header>
     
