--- a/html2/page3.html
+++ b/html2/page3.html
@@ -10,7 +10,7 @@
     <body>
         
         <header style="height: 75px; width: 50%; background-color: cornflowerblue; border-bottom: solid" class="mx-auto">
-            <h2 style="text-align: center; ">TaJah Reynolds CSE451 HTML Assignment</h2>
+            <h2 style="text-align: center; ">TaJah Reynolds CSE451 HTML Assignment Feb 2 2021</h2>
         </header>
         
         <div class="mx-auto" style="background-color: bisque; width: 50%">
