--- a/html2/index.html
+++ b/html2/index.html
@@ -10,7 +10,7 @@
  
     <body>
         <header style="height: 75px; width: 100%; background-color: cornflowerblue; border-bottom: solid;">
-            <h1 style="padding-left: 1%">TaJah Reynolds CSE451 HTML Assignment</h1>
+            <h1 style="padding-left: 1%">TaJah Reynolds CSE451 HTML Assignment Feb 2 2021</h1>
         </header>
     
     
