--- a/week3/index.html
+++ b/week3/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <form method="post" target="_blank" onsubmit="func()">
+    <form method="post" onsubmit="func()">
         <label for="key">Key:</label><br>
         <input type="text" id="key" name="key"><br>
         <label for="value">Value:</label><br>
