--- a/week3/index.html
+++ b/week3/index.html
@@ -25,8 +25,8 @@
                 e.preventDefault();
             });
             // checking if not null
-            var key = $("#key")[0].value);
-            var val = $("#value")[0].value);
+            var key = $("#key")[0].value;
+            var val = $("#value")[0].value;
             if (!key || !value) {
                 console.error("Null value submitted")
             } else {
