--- a/week3/index.html
+++ b/week3/index.html
@@ -10,6 +10,7 @@
 </head>
 
 <body>
+    <p>Simple JavaScript program to add new entries to CSE451 key value pair api.</p>
     <form method="post" onsubmit="func()">
         <label for="key">Key:</label><br>
         <input type="text" id="key" name="key"><br>
