--- a/week2/index.html
+++ b/week2/index.html
@@ -18,11 +18,11 @@
         <div class="container">
             <div class="row">
                 <div class="col">
-                    <img src="pexels-nick-bondarev-4627455.jpg">
+                    <img src="pexels-nick-bondarev-4627455.jpg" alt="logo">
                 </div>
                 <div class="col">
                     <table class="mx-auto">
-                        <thead><th>Key</th><th>Value</th></thead>
+                        <tr><th>Key</th><th>Value</th></tr>
                         <tbody id="pairs"></tbody>
                     </table>
                 </div>
